objects/Apttus_Config2__ConfigSystemProperties__c.object
<CustomObject>
    <fields>
        <fullName>Apttus_Config2__HideGrandTotal__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked grand total price will be hidden</description>
        <inlineHelpText>When checked grand total line will be hidden</inlineHelpText>
        <label>Hide Grand Total</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__HideResolveConfigLink__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Whether to hide resolve configuration error page link.</description>
        <inlineHelpText>When checked the link to the resolve configuration error page is hidden. It is displayed along with the constraint rule messages.</inlineHelpText>
        <label>Hide Resolve Config Link</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__HideSubtotalsInCart__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether subtotals should be hidden in the cart view</description>
        <inlineHelpText>Indicates whether subtotals should be hidden in the cart view</inlineHelpText>
        <label>Hide Subtotals In Cart</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__IndicateErrorTypeExclude__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicate products excluded by error type exclude action (DEPRECATED)</description>
        <inlineHelpText>This custom setting is deprecated</inlineHelpText>
        <label>Indicate Error Type Exclude (D)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__IndicateWarningTypeExclude__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicate products excluded by warning type exclude rule actions (DEPRECATED)</description>
        <inlineHelpText>This custom setting is deprecated</inlineHelpText>
        <label>Indicate Warning Type Exclude (D)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__InstanceUrl__c</fullName>
        <description>The Salesforce instance url</description>
        <inlineHelpText>The url of your Salesforce instance. The instance url will be used to create an absolute url for your custom pages.</inlineHelpText>
        <label>Instance Url</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__KeepAbandonedCarts__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether abandoned carts should be kept</description>
        <inlineHelpText>Indicates whether abandoned carts should be kept</inlineHelpText>
        <label>Keep Abandoned Carts</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__LargeCartSplitCriteriaFields__c</fullName>
        <description>The criteria fields used to split a large cart</description>
        <inlineHelpText>The list of Line item fields to break summarized view of items added during a large cart process. Each field API name separated by a comma or a new line.</inlineHelpText>
        <label>Large Cart Split Criteria Fields</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__LargeCartThreshold__c</fullName>
        <description>The threshold of the number of line items in the cart when exceeded indicates a large cart. A value of -1 inactivates the threshold. A large cart influences how items are processed in the application to stay under various platform governor limits..</description>
        <inlineHelpText>The threshold of the number of line items in the cart when exceeded indicates a large cart. A value of -1 inactivates the threshold. A large cart influences how items are processed in the application to stay under various platform governor limits..</inlineHelpText>
        <label>Large Cart Threshold</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__MaxAdjustmentLines__c</fullName>
        <defaultValue>1</defaultValue>
        <description>Indicates the maximum number of discount lines allowed for a line item.</description>
        <inlineHelpText>Indicates the maximum number of discount lines allowed for a line item.</inlineHelpText>
        <label>Max Adjustment Lines</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__MaxAllowedLinesForMassActions__c</fullName>
        <defaultValue>10</defaultValue>
        <description>Maximum number of lines allowed for performing mass actions on cart page</description>
        <inlineHelpText>Maximum number of lines allowed for performing mass actions on cart page</inlineHelpText>
        <label>Max Allowed Lines For Mass Actions</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__MaxConstraintRulesRoundTrip__c</fullName>
        <defaultValue>3</defaultValue>
        <description>This is the maximum number of round trips after which the constraint rule processing should stop.</description>
        <inlineHelpText>This is the maximum number of round trips after which the constraint rule processing should stop. Round trip happens only when auto included products trigger more rules.</inlineHelpText>
        <label>Max Constraint Rules Round Trip</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__MaxProductDetailsPerRequest__c</fullName>
        <defaultValue>100</defaultValue>
        <description>Defines the maximum number of product details in a single request</description>
        <inlineHelpText>The maximum number of product details allowed per request will be restricted to this number</inlineHelpText>
        <label>Maximum Product Details Per Request</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__MiscChargeTypes__c</fullName>
        <description>Enter the list of miscellaneous charge types. Each charge type should be separated by a new line.</description>
        <inlineHelpText>Enter the list of miscellaneous charge types. Each charge type should be separated by a new line.</inlineHelpText>
        <label>Misc Charge Types</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__MultiCurrencyManagement__c</fullName>
        <description>Indicate the multi-currency management system.</description>
        <inlineHelpText>Indicate which currency management system CPQ will use in a multi-currency environment. 
Valid values:
Apttus
Platform</inlineHelpText>
        <label>Multi Currency Management</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__OptionLineItemColumns__c</fullName>
        <description>Enter the list of fields from the line item object displayed in the Option Hierarchy page.  Each field API name may be separated either by a coma or by a new line.</description>
        <inlineHelpText>Enter the list of fields from the line item object displayed in the Option Hierarchy page.  Each field API name may be separated either by a coma or by a new line.</inlineHelpText>
        <label>Option Line Item Columns</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__OptionPricingChunkSize__c</fullName>
        <defaultValue>100</defaultValue>
        <description>The option pricing chunk size for bundles with large number of options. The default value is 100. The SFDC governor limit affects the chunk size.</description>
        <inlineHelpText>The option pricing chunk size for bundles with large number of options. The default value is 100. The SFDC governor limit affects the chunk size.</inlineHelpText>
        <label>Option Pricing Chunk Size</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__OptionProductColumns__c</fullName>
        <description>Enter the list of fields from the product object displayed in the Option Hierarchy page. Each field API name may be separated either by a coma or by a new line.</description>
        <inlineHelpText>Enter the list of fields from the product object displayed in the Option Hierarchy page. Each field API name may be separated either by a coma or by a new line.</inlineHelpText>
        <label>Option Product Columns</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__OptionsPageDefault__c</fullName>
        <description>The default page for configuring product options</description>
        <inlineHelpText>Enter the default options page. On configure command  this page is displayed for selecting options. Valid values are :
SelectConfigOptions 
SelectConfigOptionsTabView
SelectConfigOptionsListView
SelectConfigOptionsTreeView
SelectBundleOptions</inlineHelpText>
        <label>Options Page</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__PercentageFieldPrecision__c</fullName>
        <description>Holds the percentage field precision.
(used by the formatfields function)</description>
        <label>Percentage Field Precision</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__PerformMassActionsInParallel__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Perform Mass Actions In Parallel</description>
        <inlineHelpText>Perform Mass Actions In Parallel</inlineHelpText>
        <label>Perform Mass Actions In Parallel</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__PopulateAttributeExtensions__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether attribute values are populated in the extension objects</description>
        <inlineHelpText>Indicates whether attribute values are populated in the extension objects</inlineHelpText>
        <label>Populate Attribute Extensions</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__PreventErrorExcludeSelection__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Whether to prevent selection of products listed by error type exclude rule action</description>
        <label>Prevent Error Exclude Selection(D)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__PreventErrorTypeExcludeSelection__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Prevent selection of products excluded by error type exclude rule action. Hides select button (DEPRECATED)</description>
        <inlineHelpText>This custom setting is deprecated</inlineHelpText>
        <label>Prevent Error Type Exclude Selection (D)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__PricingBatchSize__c</fullName>
        <description>The pricing batch size. The default value is 1. The SFDC governor limit affects the batch size.</description>
        <inlineHelpText>The pricing batch size. The default value is 1. The SFDC governor limit affects the batch size.</inlineHelpText>
        <label>Pricing Batch Size</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__PricingExecutionMode__c</fullName>
        <description>The pricing execution mode</description>
        <inlineHelpText>Mode for pricing execution.
Valid Values:
* Classic
* Turbo</inlineHelpText>
        <label>Pricing Execution Mode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__PricingProfile__c</fullName>
        <description>The default pricing profile. The default value is Advanced

Valid values are:
=============
Basic
Advanced
External</description>
        <inlineHelpText>The default pricing profile. The default value is Advanced

Valid values are:
=============
Basic
Advanced
External</inlineHelpText>
        <label>Pricing Profile</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ProductAttributeDetailPage__c</fullName>
        <description>The custom page to capture product attribute detail information</description>
        <inlineHelpText>The custom page to capture product attribute detail information</inlineHelpText>
        <label>Product Attribute Detail Page</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ProductAttributeExtensionLookupFields__c</fullName>
        <description>Contains the names of the Product Attribute Extension tables Lookup Field Names and will be read if the Attribute Extension is enabled</description>
        <inlineHelpText>Comma separated List of values to specify the Product Attribute Extension Objects Lookup Field Names.</inlineHelpText>
        <label>Product Attribute Extension Tables</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ProductDisplayMaxLength__c</fullName>
        <defaultValue>21</defaultValue>
        <description>Captures the maximum length of the product name for display. If the product name exceeds the specified length – it will be ellipsis display, else it will wrap the product name. The default length is 21 characters.</description>
        <inlineHelpText>Captures the maximum length of the product name for display. If the product name exceeds the specified length – it will be ellipsis display, else it will wrap the product name.</inlineHelpText>
        <label>Product Display Max Length</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ProductOptionPriceOrder__c</fullName>
        <defaultValue>&quot;Last&quot;</defaultValue>
        <description>Indicates the evaluation order of the product option price in the pricing waterfall.

Valid Values (default = &quot;Last&quot;)
=======================
First
Last</description>
        <inlineHelpText>Indicates the evaluation order of the product option price in the pricing waterfall.

Valid Values (default = &quot;Last&quot;)
=======================
First
Last</inlineHelpText>
        <label>Product Option Price Order</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ProductSortingFields__c</fullName>
        <description>Enter the list of API names of fields from the Product object made available in the Sorting drop down on the Catalog page. User is allowed to select a field from this list to sort the Catalog page content.</description>
        <inlineHelpText>Enter the list of API names of fields from the Product object made available in the Sorting drop down on the Catalog page. User is allowed to select a field from this list to sort the Catalog page content.</inlineHelpText>
        <label>Product Sorting Fields</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ProductTotalingHierarchy__c</fullName>
        <description>Enter the list of product fields that represent the product totaling hierarchy. Each product field name should be separated by a new line. For Ad-hoc totaling enter the line item fields which represent a totaling group. If empty then Bundle Family will be used by default.</description>
        <inlineHelpText>Enter the list of product fields that represent the product totaling hierarchy. Each product field name should be separated by a new line. For Ad-hoc totaling enter the line item fields which represent a totaling group</inlineHelpText>
        <label>Adhoc/Product Totaling Hierarchy</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__QuantityFieldPrecision__c</fullName>
        <description>Holds the quantity field precision.
(used by the formatfields function)</description>
        <label>Quantity Field Precision</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__RefineSearchCheckboxDisplayLimit__c</fullName>
        <description>Search facet displays as picklist if this limit is crossed, otherwise checkbox(s).</description>
        <inlineHelpText>Search facet displays as picklist if this limit is crossed, otherwise checkbox(s).</inlineHelpText>
        <label>Refine Search Checkbox Display Limit</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__RemoveInvalidRuleProducts__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether line items auto included by invalid rules should be auto removed on cart launch. If not auto removed, the user will be prompted to take appropriate action.</description>
        <inlineHelpText>Indicates whether line items auto included by invalid rules should be auto removed on cart launch. If not auto removed, the user will be prompted to take appropriate action.</inlineHelpText>
        <label>Remove Invalid Rule Products</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ResolveConfigurationPageDefault__c</fullName>
        <description>The default page for resolving configuration errors/warnings</description>
        <inlineHelpText>Enter the default Resolve Configure page. On Resolve Configuration Errors\Warnings, this page will be used. Valid values are :
ResolveConfig
ResolveConfigProducts</inlineHelpText>
        <label>Resolve Configuration Page</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__RevalidationProductColumns__c</fullName>
        <description>Enter the list of fields from the product object displayed on the revalidation product dialog. Each field API name may be separated either by a comma or by a new line.</description>
        <inlineHelpText>Enter the list of fields from the product object displayed on the revalidation product dialog. Each field API name may be separated either by a comma or by a new line.</inlineHelpText>
        <label>Revalidation Product Columns</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__RoundingMode__c</fullName>
        <defaultValue>&quot;HALF_EVEN&quot;</defaultValue>
        <description>The custom rounding mode. 
Valid values (default=&quot;HALF_EVEN&quot;)
UP
HALF_UP
DOWN
HALF_DOWN
HALF_EVEN</description>
        <inlineHelpText>The custom rounding mode. 
Valid values (default=&quot;HALF_EVEN&quot;)
UP
HALF_UP
DOWN
HALF_DOWN
HALF_EVEN</inlineHelpText>
        <label>Rounding Mode</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__RunFinalizationTaskInAsyncMode__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the post finalization trigger should be run asynchronously</description>
        <inlineHelpText>Indicates whether the post finalization trigger should be run asynchronously</inlineHelpText>
        <label>Run Post Finalize Trigger In Async Mode</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__RunSecondaryFinalizationTaskInAsyncMode__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the secondary finalization task (attributes, usage tiers, etc) should be run asynchronously</description>
        <inlineHelpText>Indicates whether the secondary finalization task (attributes, usage tiers, etc) should be run asynchronously</inlineHelpText>
        <label>Run Misc Finalization Task In Async Mode</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__SameDayCancellation__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checking out Same Day Cancellation option will provide with behavior where cancellation will be done on same day, unchecking it will mean Cancellation will be using cancel day + 1 behavior.</description>
        <inlineHelpText>Checking out Same Day Cancellation option will provide with behavior where cancellation will be done on same day, unchecking it will mean Cancellation will be using cancel day + 1 behavior.</inlineHelpText>
        <label>Same Day Cancellation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__SaveOnAllActions__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked save operation will be performed on all actions.</description>
        <inlineHelpText>When checked save operation will be performed on all actions.</inlineHelpText>
        <label>Save On All Actions</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__SearchAttributeDefaultPage__c</fullName>
        <description>Field on the line item when checked, skips Constraint check. Enables bypassing constraint and finalize quote even if there are constraint errors.</description>
        <inlineHelpText>A checkbox type field in line item object. This is used to skip a line item from constraint check.</inlineHelpText>
        <label>Skip Constraint Decision Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__SearchAttributeValuePage__c</fullName>
        <description>The scope to look for related items in related pricing. The default value is Cart
Valid Values are:
============
Cart
Bundle</description>
        <inlineHelpText>The scope to look for related items in related pricing. The default value is Cart
Valid Values are:
============
Cart
Bundle</inlineHelpText>
        <label>Related Price Scope</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__SearchCategoryDefault__c</fullName>
        <description>The default search category.</description>
        <inlineHelpText>The default category to search using the text entered in the search box during product selection.</inlineHelpText>
        <label>Search Category Default</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__SellingTermCalculationMethod__c</fullName>
        <defaultValue>&quot;Calendar&quot;</defaultValue>
        <description>Indicates the method to calculate the selling term for Line Items.</description>
        <inlineHelpText>The level of accuracy to calculate selling terms. With &quot;Precise&quot;, selling term is calculated using total number of days in start and end months (e.g. 8/30 to 9/29 = 1.03118 mo).
Valid values (default=&quot;Normal&quot;):
Normal
Precise</inlineHelpText>
        <label>Selling Term Calculation Method</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ServiceLineSplitCriteria__c</fullName>
        <description>Comma separated list of related line item fields and asset line item fields to be considered for automatic splitting.</description>
        <inlineHelpText>Comma separated values of asset line item which define the split criteria for asset related line items.</inlineHelpText>
        <label>Service Line Split Criteria</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ServicePriceDistributionMethod__c</fullName>
        <defaultValue>&quot;Allocate&quot;</defaultValue>
        <description>The service price distribution method.  Methods are Allocate and Rollup. 
Allocate method distributes the net price of the service to the related lines.  Rollup method rolls up the price for individual related lines and arrives at the service base price. The default value is Allocate.</description>
        <inlineHelpText>The service price distribution method. Methods are Allocate and Rollup. 
Allocate method distributes the net price of the service to the related lines.  Rollup method rolls up the price for individual related lines and arrives at the service base price.</inlineHelpText>
        <label>Service Price Distribution Method</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ShowAdminSidebar__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the sidebar should be displayed for admin pages.</description>
        <inlineHelpText>Indicates whether the sidebar should be displayed for admin pages.</inlineHelpText>
        <label>Show Admin Sidebar</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ShowAttributesInCart__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Shows the specified attributes applicable to the line items in the cart. Attributes appear in the product dialog.</description>
        <inlineHelpText>Shows the specified attributes applicable to the line items in the cart. Attributes appear in the product dialog.</inlineHelpText>
        <label>Show Attributes In Cart</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ShowErrorInHeader__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether relative url should be generated for links for a Communities user</description>
        <inlineHelpText>Indicates whether relative url should be generated for links for a Communities user</inlineHelpText>
        <label>Generate Relative Url For Sites</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ShowHeader__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the header tabs and sidebar should be displayed.</description>
        <inlineHelpText>Indicates whether the header tabs and sidebar should be displayed.</inlineHelpText>
        <label>Show Header</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ShowInfoInHeader__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Whether to show information message from auto include or auto exclude in the header</description>
        <inlineHelpText>Whether to show information message from auto include or auto exclude in the header</inlineHelpText>
        <label>Show Info In Header</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ShowMessageInline__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Show error and warning messages along with the product name</description>
        <inlineHelpText>Show error and warning messages along with the product name</inlineHelpText>
        <label>Show Message Inline(D)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ShowWarningInHeader__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Whether to show warning type rule action messages in header (DEPRECATED)</description>
        <inlineHelpText>This custom setting is deprecated</inlineHelpText>
        <label>Show Warning In Header (D)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__SkipPricingOnSelectPages__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Keyed matrix pricing performs keyed lookup to locate matrix entries in a large matrix</description>
        <inlineHelpText>Keyed matrix pricing performs keyed lookup to locate matrix entries in a large matrix</inlineHelpText>
        <label>Enable Keyed Matrix Pricing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__SkipReview__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the review step should be skipped for items in the cart</description>
        <inlineHelpText>Indicates whether the review step should be skipped for items in the cart</inlineHelpText>
        <label>Skip Review</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__SplitCartCriteriaFields__c</fullName>
        <description>The criteria fields used to split a large cart</description>
        <inlineHelpText>The list of Line item fields to break summarized view of items added during a large cart process. Each field API name separated by a comma or a new line.</inlineHelpText>
        <label>Split Cart Criteria Fields</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__SplitCartThreshold__c</fullName>
        <label>Split Cart Threshold</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__StaticCriteriaFields__c</fullName>
        <description>Constraint Criteria Fields that have static values. Fields whose value do not change after the records are created for a cart.</description>
        <inlineHelpText>Enter comma separated fields used in constraint rule criteria to optimize constraint rule.</inlineHelpText>
        <label>Static Criteria Fields</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__TabViewInConfigureBundle__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Show the option groups in a tab view. Top level option groups are displayed as tabs.</description>
        <inlineHelpText>Check to show tab view. Top level option groups are displayed as tabs.</inlineHelpText>
        <label>Show Tab View</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__TermFieldPrecision__c</fullName>
        <description>Holds the selling term field precision.
(used by the formatfields function)</description>
        <label>Term Field Precision</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__TotalingGroupType__c</fullName>
        <description>The totaling group preference.</description>
        <inlineHelpText>The default value for the summary group type picklist. For Product based totaling, also indicate the fields which form the hierarchy using the Product Hierarchy Fields custom setting.
Valid values are:
=============
Category
Product
Ad Hoc</inlineHelpText>
        <label>Totaling Group Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__UpdateViewCategoryBatchSize__c</fullName>
        <defaultValue>1</defaultValue>
        <description>Indicates the number of categories to update views for in a single batch transaction</description>
        <inlineHelpText>Indicates the number of categories to update views for in a single batch transaction</inlineHelpText>
        <label>Update View Category Batch Size</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__UpdateViewProductBatchSize__c</fullName>
        <defaultValue>2000</defaultValue>
        <description>Indicates the number of products to update views for in a single batch transaction</description>
        <inlineHelpText>Indicates the number of products to update views for in a single batch transaction</inlineHelpText>
        <label>Update View Product Batch Size</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__UpdateViewUseDmlLimit__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether DML limit should be used to determine the batch work load for updating views</description>
        <inlineHelpText>Indicates whether DML limit should be used to determine the batch work load for updating views</inlineHelpText>
        <label>Update View Use Dml Limit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__UseButtonToSaveSelection__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether to wait for button click before processing option selection and validation.</description>
        <inlineHelpText>Indicates whether to wait for button click before processing option selection and validation.</inlineHelpText>
        <label>Use Button To Save Selection</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__UseEnhancedCSS__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether to include the enhanced css file on CPQ pages</description>
        <inlineHelpText>Indicates whether to include the enhanced css file on CPQ pages</inlineHelpText>
        <label>Use Enhanced CSS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ViewCartCustomFields2__c</fullName>
        <description>Enter the list of additional custom fields from the line item object displayed in the custom view cart page</description>
        <inlineHelpText>Enter the list of additional custom fields from the line item object displayed in the custom view cart page</inlineHelpText>
        <label>View Cart Custom Fields 2</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ViewCartCustomFields__c</fullName>
        <description>Enter the list of custom fields from the line item object displayed in the custom view cart page</description>
        <inlineHelpText>Enter the list of custom fields from the line item object displayed in the custom view cart page. Additional fields may be entered using the View Cart Custom Fields 2 custom setting.</inlineHelpText>
        <label>View Cart Custom Fields</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ViewCartPage__c</fullName>
        <description>The custom page to view cart information</description>
        <label>View Cart Page</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>